add legacy build